--- a/scheduler/display_cal/templates/display_cal/index.html
+++ b/scheduler/display_cal/templates/display_cal/index.html
@@ -2,6 +2,9 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'display_cal/style.css' %}" />
 
-<p>Hi!</p>
-
-<p>Hover Me!<span class="tooltip">Yay!</span></p>
+<table>
+    <tr>
+        <td>Test 1<span class="tooltip">Yay!</span></td>
+        <td>Test 2<span class="tooltip">Woo</span></td>
+    </tr>
+</table>
