--- a/scheduler/display_cal/templates/display_cal/index.html
+++ b/scheduler/display_cal/templates/display_cal/index.html
@@ -2,7 +2,7 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'display_cal/style.css' %}" />
 
-<table>
+<table class="middle">
     <tr>
         <td>Test 1<span class="tooltip">Yay!</span></td>
         <td>Test 2<span class="tooltip">Woo</span></td>
