--- a/scheduler/display_cal/static/display_cal/style.css
+++ b/scheduler/display_cal/static/display_cal/style.css
@@ -22,6 +22,8 @@ td:hover div {
 table {
     background-color: white;
     text-align: center;
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    font-size: 14px;
 }
 
 .middle {
