--- a/scheduler/display_cal/templates/display_cal/index.html
+++ b/scheduler/display_cal/templates/display_cal/index.html
@@ -16,10 +16,14 @@
                 {% if day.1 %}
                     <td class="class">{{day.1.codeNumber}}
                         <div class="tooltip">
-                            Friends: 
-                            {% for friend in day.2 %}
-                                {{friend}} 
-                            {% endfor %}
+                            {% if day.2 %}
+                                Friends: 
+                                {% for friend in day.2 %}
+                                    {{friend}} 
+                                {% endfor %}
+                            {% else %}
+                                No friends here!
+                            {% endif %}
                         </div>
                     </td>
                 {% else %}
