--- a/scheduler/uploader/templates/uploader/upload.html
+++ b/scheduler/uploader/templates/uploader/upload.html
@@ -1,7 +1,18 @@
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{form.name}}
-    {{form.username}}
-    {{form.docfile}}
+    <table>
+        <tr>
+            <td>Name:</td>
+            <td>{{form.name}}</td>
+        </tr>
+        <tr>
+            <td>Username:</td>
+            <td>{{form.username}}</td>
+        </tr>
+        <tr>
+            <td>File:</td>
+            <td>{{form.docfile}}</td>
+        </tr>
+    </table>
     <p><input type="submit" value = "Upload"/></p>
 </form>
