compare button - currently useless

--- a/scheduler/display_cal/templates/display_cal/index.html
+++ b/scheduler/display_cal/templates/display_cal/index.html
@@ -2,6 +2,9 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'display_cal/style.css' %}" />
 
+<button id="myButton" class="float-left submit-bottom" >Compare with another schedule </button>
+
+
 <table class="middle">
     <tr>
         <th>Time</th>
@@ -33,3 +36,4 @@
         </tr>
     {% endfor %}
 </table>
+
